// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bullet renders correctly with variant default 1`] = `
<div>
  <span
    aria-describedby="default"
    class="RdsBullet-root MuiBadge-root BaseBadge-root css-1c32n2y-MuiBadge-root"
    role="bullet"
  >
    <span
      class="MuiBadge-badge MuiBadge-dot MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular BaseBadge-badge css-qc5jhc-MuiBadge-badge"
    />
  </span>
</div>
`;

exports[`Bullet renders correctly with variant error 1`] = `
<div>
  <span
    aria-describedby="error"
    class="RdsBullet-root MuiBadge-root BaseBadge-root css-1c32n2y-MuiBadge-root"
    role="bullet"
  >
    <span
      class="MuiBadge-badge MuiBadge-dot MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular MuiBadge-colorError BaseBadge-badge css-hqv4f7-MuiBadge-badge"
    />
  </span>
</div>
`;

exports[`Bullet renders correctly with variant info 1`] = `
<div>
  <span
    aria-describedby="info"
    class="RdsBullet-root MuiBadge-root BaseBadge-root css-1c32n2y-MuiBadge-root"
    role="bullet"
  >
    <span
      class="MuiBadge-badge MuiBadge-dot MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular MuiBadge-colorInfo BaseBadge-badge css-17bmh8a-MuiBadge-badge"
    />
  </span>
</div>
`;

exports[`Bullet renders correctly with variant primary 1`] = `
<div>
  <span
    aria-describedby="primary"
    class="RdsBullet-root MuiBadge-root BaseBadge-root css-1c32n2y-MuiBadge-root"
    role="bullet"
  >
    <span
      class="MuiBadge-badge MuiBadge-dot MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular MuiBadge-colorPrimary BaseBadge-badge css-vzhiio-MuiBadge-badge"
    />
  </span>
</div>
`;

exports[`Bullet renders correctly with variant secondary 1`] = `
<div>
  <span
    aria-describedby="secondary"
    class="RdsBullet-root MuiBadge-root BaseBadge-root css-1c32n2y-MuiBadge-root"
    role="bullet"
  >
    <span
      class="MuiBadge-badge MuiBadge-dot MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular MuiBadge-colorSecondary BaseBadge-badge css-2liczv-MuiBadge-badge"
    />
  </span>
</div>
`;

exports[`Bullet renders correctly with variant warning 1`] = `
<div>
  <span
    aria-describedby="warning"
    class="RdsBullet-root MuiBadge-root BaseBadge-root css-1c32n2y-MuiBadge-root"
    role="bullet"
  >
    <span
      class="MuiBadge-badge MuiBadge-dot MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular MuiBadge-colorWarning BaseBadge-badge css-120limi-MuiBadge-badge"
    />
  </span>
</div>
`;
